@@ -1,8 +1,8 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-ext.jar 2465628 RMD160 b2f428b9935c3fcb2fbfd38ef0b48a9ab8513f54 SHA1 49f4c21ef42d9b95ca2816bfa79f635e69b89bbb SHA256 caa5869e77b92bddd2416fdf8852d264fee9be49b1260281a7af4d36f8faf81f
-DIST freenet-r17359-snapshot.jar 2340516 RMD160 cbe1f35f94e4a271c7bcfb6ffe065d177993ec37 SHA1 e7fd5f907fb05a5c919d4467f25d2eafdd77d311 SHA256 cb1f7cc42d44f0dce1ca0033069747318d9a78b4f2d2d5cae5ed1c39ad5ada9b
+DIST freenet-r17383-snapshot.jar 2340527 RMD160 6b8ac0fe64e2488f34a2212aa42f9ad40ae10714 SHA1 21b0f444e53b0a82ac68c85cac87d9583de983ee SHA256 f0df29b70a8e78fd0e89a77b5b65ba7488e061b810b1a9d5eefa0860432d9916
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
 DIST seednodes.fref 21476 RMD160 198b4e8a354b81627cdb1a56918efbc865e309e6 SHA1 85110203cd406b5febd2ec02f8ee7815ca5dbd11 SHA256 eb9866fa4a9f7eeaabc380a6749b05beac8fa366ae548e383a11f92ddf144816
-EBUILD freenet-bin-0.7_alpha_pre1106.ebuild 2405 RMD160 7807d9bfae22c176b14b521a7356cbf1fcd5eeda SHA1 1e89f453aca524b99575fc15f9c04e18461245f9 SHA256 69af73bd068a44e868180e48ae917dd15a7ec0eb21e91102a69ed5db2dc64e16
-MISC ChangeLog 5890 RMD160 6379aa860613035b0df92c9feb01a17db4ad8963 SHA1 f779a9c9e3bcd3b9f94b657e046c06eaf9c9d08e SHA256 faf8e369b41ec48783714ce9efb7843291a8e171e4f6627c8ed2b4e01ef3d392
+EBUILD freenet-bin-0.7_alpha2.ebuild 2405 RMD160 3b1fbaad0312d46d40b79647500144055858de5f SHA1 a11c6d26f53195270107be58ee0081efb7684526 SHA256 d8c6ed4fb0c5dd5b063462af40eea8352e77c55ebde8df48ef368e42cb70e99b
+MISC ChangeLog 6029 RMD160 c1eeedba17bc5196994cbbdca7c28536d3ec3ef6 SHA1 9ac42924040c67b5a1336208e2892f1821d3c197 SHA256 9046f5b7009dde675493b856cad9f35e4aa483f7a7f6c758ddaa73ce33448deb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
