@@ -4,7 +4,7 @@
 
 inherit eutils
 
-MY_JAR_REV="r17359"
+MY_JAR_REV="r17383"
 MY_JAR_FILE="freenet-${MY_JAR_REV}-snapshot.jar"
 
 DESCRIPTION="An encrypted network without censorship"
