@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1106.tar.bz2 19206149 RMD160 c47fa7df035a7a8e4e20a94c9c7137d5f649612f SHA1 94ed7f28c9783d4216e8021686bf15c5375cb566 SHA256 9fb51251e3ffbd497e9e6d18f47c0b3cfa017dd371dede87b8b8ff0e488ccc33
-EBUILD freenet-0.7_alpha_pre1106.ebuild 1422 RMD160 f5985c90968bf4835387ea2306085d8cca42982d SHA1 b22d0a34d0ecf7d43a62921730de7328deb3e75a SHA256 563068fa4e3eef4eaf22b345625aae9f88fa90ac7ce1bdf823ba50fa423f37fd
-MISC ChangeLog 4323 RMD160 674ac1c49fd4de6dab20d816adcd463ad5f2096b SHA1 6bdf4b3ba82114de2b5973d12732f9927e69462c SHA256 a17abe846c5946b80d8fffbd760690b7c7c8be02a7371d2147a5a6019e1ac642
+DIST freenet-sources-v1107.tar.bz2 19206986 RMD160 b734290e0c4ad3ddfde3a34127433266c4a61f70 SHA1 4de3caa1868ff3ed3bfa34b9d94bd6927feafcca SHA256 a0df2bc3921a0d26187f47e8b9c0b752b1ac757d0592ad6aac65be5b12d47cb3
+EBUILD freenet-0.7_alpha2.ebuild 1436 RMD160 15a6a0427efb781537a3c675f6455ddc98d5d45a SHA1 933640b1fa25f28d8f65290e30a7ce5a1312cd1f SHA256 e22578ea263a232fba00421ec50d580fbd3afa316122b6bdccc255d3fc4a97df
+MISC ChangeLog 4454 RMD160 e8a566e83afacbc120a4bb033ae9c1ac12ecb0f1 SHA1 46afd5d4e7216cc47e28127eb65db5a38bd4c2b5 SHA256 2abae1592698c05edaa89e142ab2d3750e489c3f22f7361e0f24f60effa83111
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
