@@ -4,7 +4,8 @@
 
 inherit eutils
 
-MY_PV="${PV/0.7_alpha_pre/}"
+#MY_PV="${PV/0.7_alpha_pre/}"
+MY_PV="1107"
 DESCRIPTION="An encrypted network without censorship"
 HOMEPAGE="http://www.freenetproject.org/"
 SRC_URI="http://dev.gentooexperimental.org/~tommy/${PN}-sources-v${MY_PV}.tar.bz2"
