@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Jan 2008; (Tommy[D]) tommy100@gmx.de +freenet-0.7_alpha2.ebuild,
+  -freenet-0.7_alpha_pre1106.ebuild:
+  New upstream release
+
   29 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_alpha_pre1105.ebuild,
   +freenet-0.7_alpha_pre1106.ebuild:
   New upstream release
